Fix members-list and its distorted avatars

--- a/resources/public/css/_avatar.scss
+++ b/resources/public/css/_avatar.scss
@@ -19,14 +19,12 @@
 }
 
 .profile-pic-fill {
-  @include rounded.rounded-1;
   align-items: center;
-  display: flex;
   justify-content: center;
-  overflow: hidden;
 }
 
 .profile-pic-image {
+  @include rounded.rounded-1;
   background-position: center center;
   height: 100%;
   object-fit: cover;
